# polymarket-mm

./: .env.example  .gitignore  CLAUDE.md  Makefile  README.md
python/: pyproject.toml
python/analysis/: __init__.py  distribution_models.py  evaluate_distributions.py
python/backtest/: __init__.py  binance_loader.py  data_loader.py  datalake_engine.py  datalake_loader.py  engine.py  engine_bucketed.py  engine_fast.py  market_parser.py  orderbook_engine.py  orderbook_loader.py  run_bucketed_backtest.py  run_datalake_backtest.py  run_enhanced.py  run_insight_backtest.py  run_orderbook_backtest.py  run_param_sweep.py  run_tpbs_backtest.py  run_tpsl_bs_backtest.py  simulator.py  storage.py  timeseries.py  utils.py  visualize.py
python/backtest/dashboard/: __init__.py  app.py  charts.py
python/dashboard/: __init__.py  config.py  server.py
python/dashboard/models/: __init__.py  schemas.py
python/dashboard/routes/: __init__.py  api.py  websocket.py
python/dashboard/services/: __init__.py  broadcast.py  market_discovery.py  model_factory.py  state_poller.py  strategy_manager.py  strategy_worker.py
python/dashboard/static/: app.js  charts.js  index.html
python/paper/: __init__.py  executor.py  metrics.py  order_simulator.py  position_tracker.py  runner.py  shm_paper.py  supabase_store.py  test_async_supabase.py  token_registry.py
python/strategy/: __init__.py  orchestrator.py
python/strategy/models/: __init__.py  (+7 more)
python/tests/: conftest.py  test_black_scholes.py  test_distributions.py  test_polymarket_utils.py  test_quote_normalization.py  test_shm_sizes.py
(+79 files in other folders)
